test with assertj; fix in old-style switch; return null on types not found in bytecode inspector; add escape sequence for space